# rdaservice

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/api/v1/: extract_router.py
app/core/: config.py  logging.py
app/domain/: models.py
app/eval/: eval_runner.py
app/services/: merger.py  pipeline.py  regex_extractor.py  text_extractor.py
app/services/llm/: base.py  ollama_client.py
app/services/ocr/: base.py  paddle_engine.py  tesseract_engine.py
tests/: test_pipeline.py  test_text_extractor.py
